feat: Add background image

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,4 @@
 .bg-cogs {
     background-color: #357edd;
+    background-image: url('https://images.t3n.de/news/wp-content/uploads/2022/11/getimgai-ki-bilder.jpg?class=hero-small');
   }
