--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -30,6 +30,8 @@
     width: 15rem;
     height: 17rem;
     margin-right: 5rem;
+    margin-top: -0.5rem;
+    margin-left: -0.5rem;
     color: white;
     font-size: 3.5rem;
     justify-content: flex-end;
