--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -78,3 +78,15 @@
   .coworker--list__item {
     margin-top: 0.3rem;
   }
+
+  @media screen and (max-width: 768px) {
+    .line--container--span {
+      width: 100%;
+      margin: 0;
+      text-align: center;
+    }
+  
+    .site--container {
+      flex-direction: column
+    }
+  }
