--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -62,8 +62,10 @@
   .input--field {
     margin-bottom: 0.8rem;
     height: 1.8rem;
-    border-radius: 0.25rem;
-    border-width: thin;
+   border-radius: 0.3rem;
+   border: 0.08rem solid rgba(0,0,0,0.3);
+   font-size: 1rem;
+   padding-left: 0.5rem;
   }
 
   .line--container {
