--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -23,7 +23,7 @@
 
   .form--button:hover {
     cursor: pointer;
-      transform:scale(1.2,1.2);
+      transform:scale(1.05);
   }
 
   .site--container {
@@ -51,6 +51,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 3rem;
+    font-size: 4.8rem;
   }
 
   .measure {
@@ -98,12 +99,16 @@
   
   @media screen and (max-width: 768px) {
     .line--container--span {
-      width: 100%;
+      width: 105%;
       margin: 0;
       text-align: center;
+      height: 10%;
+      margin-top: -0.5rem;
+      margin-left: -0.5rem;
+      margin-right: -0.5rem;
     }
   
     .site--container {
-      flex-direction: column
+      flex-direction: column;
     }
   }
