--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -56,6 +56,10 @@
     font-size: 3rem;
   }
 
+  .line--heading {
+    margin-left: 0.2rem;
+  }
+
   .measure {
     width: 27rem;
     margin-top: 2rem;
@@ -103,12 +107,6 @@
     color: white;
     font-size: 0.75rem;
   }
-
-  .ph5 {
-    padding-left: 4rem;
-    padding-right: 4rem;
-  }
-
   
   @media screen and (max-width: 768px) {
     .line--container--span {
